feat: Task model implemented + create new task + update a task + delete a task + get a single task + get all owned tasks + add image to a task
